Fix message screen layout issues

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,3 +51,14 @@
     @apply transform scale-105;
   }
 }
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
